Removed Guo (for now)

--- a/tex/supporting-information/esthag_supporting.tex
+++ b/tex/supporting-information/esthag_supporting.tex
@@ -14,8 +14,8 @@
 \affiliation[Brown University]{Brown University, School of Engineering, Providence, RI, USA}
 \author{Yijun Yao}
 \affiliation[Brown University]{Brown University, School of Engineering, Providence, RI, USA}
-\author{Yuanming Guo}
-\affiliation[Arizona State University]{Arizona State University}
+%\author{Yuanming Guo}
+%\affiliation[Arizona State University]{Arizona State University}
 \author{Eric M. Suuberg}
 \email{eric_suuberg@brown.edu}
 \affiliation[Brown University]{Brown University, School of Engineering, Providence, RI, USA}
